bucles, operadores, array, objetos

--- a/ej1.html
+++ b/ej1.html
@@ -7,8 +7,10 @@
 </head>
 <body>
   
-  <div id="demo"></div>
+  <div id="demo">
 
-  <script src="js/script.js"></script>
+  </div>
+
+  <script src="js/ej1.js"></script>
 </body>
 </html>
